--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="row">
 
         <div class="card col-sm-12 col-md-6 col-lg-4 img-fluid"  style="width:300px">
-          <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\Indian-Prawn-Curry-1B.jpg" style="height: 400px;" alt="Card image">
+          <img class="card-img-top" src="Indian-Prawn-Curry-1B.jpg" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">prawns curry <span style="float: right;" class="badge bg-success">3.3</span> </h6>
             <p class="card-text">golden palace north indian <small style="float: right; font-weight:lighter">$200 for one</small></p>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="card col-sm-12 col-md-6 col-lg-4 img-fluid"  style="width:300px">
-          <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\biryanii.jpg" style="height: 400px;" alt="Card image">
+          <img class="card-img-top" src="C:biryanii.jpg" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">Biryani <span style="float: right;" class="badge bg-success">4.0</span> </h6>
             <p class="card-text">Table 9 Annarao circle <small style="float: right; font-weight:lighter">$250 for one</small></p>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-          <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\fish curry.jpg" style="height: 400px;" alt="Card image">
+          <img class="card-img-top" src="fish curry.jpg" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">Fish Curry <span style="float: right;" class="badge bg-success">3.3</span> </h6>
             <p class="card-text">dindugal Thalapakatti,Tirupathi <small style="font-weight:lighter; float: right">$150 for one</small></p>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-          <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\dosa-recipe.jpg.webp" style="height: 400px;" alt="Card image">
+          <img class="card-img-top" src="dosa-recipe.jpg.webp" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">Dosa <span style="float: right;" class="badge bg-success">4.5</span> </h6>
             <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$50 for one</small></p>
@@ -62,9 +62,9 @@
         </div>
 
       <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-        <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\dosa-recipe.jpg.webp" style="height: 400px;" alt="Card image">
+        <img class="card-img-top" src="pizza.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
-          <h6 class="card-title">Dosa <span style="float: right;" class="badge bg-success">4.5</span> </h6>
+          <h6 class="card-title">pizza <span style="float: right;" class="badge bg-success">4.5</span> </h6>
           <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$50 for one</small></p>
         </div>
         <div class="card-img-overlay">
@@ -74,7 +74,7 @@
       </div>
 
       <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-        <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\dosa-recipe.jpg.webp" style="height: 400px;" alt="Card image">
+        <img class="card-img-top" src="chapathi.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
           <h6 class="card-title">Dosa <span style="float: right;" class="badge bg-success">4.5</span> </h6>
           <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$50 for one</small></p>
