--- a/index.html
+++ b/index.html
@@ -62,9 +62,21 @@
         </div>
 
       <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-        <img class="card-img-top" src="pizza.jpg" style="height: 400px;" alt="Card image">
+        <img class="card-img-top" src="pizza.jfif" style="height: 400px;" alt="Card image">
         <div class="card-body">
           <h6 class="card-title">pizza <span style="float: right;" class="badge bg-success">4.5</span> </h6>
+          <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$110 for one</small></p>
+        </div>
+        <div class="card-img-overlay">
+          <span class="card-text badge bg-primary">10% off upto 10</span>
+          <span style="float: right;" class="card-text text-dark badge bg-light align-bottom">10 min | 1.5 km</span>
+        </div>
+      </div>
+
+      <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
+        <img class="card-img-top" src="chapathi.jfif" style="height: 400px;" alt="Card image">
+        <div class="card-body">
+          <h6 class="card-title">Chapathi<span style="float: right;" class="badge bg-success">4.5</span> </h6>
           <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$50 for one</small></p>
         </div>
         <div class="card-img-overlay">
@@ -74,10 +86,10 @@
       </div>
 
       <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-        <img class="card-img-top" src="chapathi.jpg" style="height: 400px;" alt="Card image">
+        <img class="card-img-top" src="Belgian-Chocolate-Ice-Cream.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
-          <h6 class="card-title">Dosa <span style="float: right;" class="badge bg-success">4.5</span> </h6>
-          <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$50 for one</small></p>
+          <h6 class="card-title">Belgian-Chocolate-Ice-Cream<span style="float: right;" class="badge bg-success">4.5</span> </h6>
+          <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$90 for one</small></p>
         </div>
         <div class="card-img-overlay">
           <span class="card-text badge bg-primary">10% off upto 10</span>
@@ -86,22 +98,10 @@
       </div>
 
       <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-        <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\dosa-recipe.jpg.webp" style="height: 400px;" alt="Card image">
+        <img class="card-img-top" src="goat-mutton-curry.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
-          <h6 class="card-title">Dosa <span style="float: right;" class="badge bg-success">4.5</span> </h6>
-          <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$50 for one</small></p>
-        </div>
-        <div class="card-img-overlay">
-          <span class="card-text badge bg-primary">10% off upto 10</span>
-          <span style="float: right;" class="card-text text-dark badge bg-light align-bottom">10 min | 1.5 km</span>
-        </div>
-      </div>
-
-      <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-        <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\dosa-recipe.jpg.webp" style="height: 400px;" alt="Card image">
-        <div class="card-body">
-          <h6 class="card-title">Dosa <span style="float: right;" class="badge bg-success">4.5</span> </h6>
-          <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$50 for one</small></p>
+          <h6 class="card-title">Mutton<span style="float: right;" class="badge bg-success">4.5</span> </h6>
+          <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$350 for one</small></p>
         </div>
         <div class="card-img-overlay">
           <span class="card-text badge bg-primary">10% off upto 10</span>
@@ -110,10 +110,10 @@
       </div>
       
       <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-        <img class="card-img-top" src="C:\Users\Doddi Naveen\Downloads\dosa-recipe.jpg.webp" style="height: 400px;" alt="Card image">
+        <img class="card-img-top" src="chicken-ankara-kabab.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
-          <h6 class="card-title">Dosa <span style="float: right;" class="badge bg-success">4.5</span> </h6>
-          <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$50 for one</small></p>
+          <h6 class="card-title">Kabab-chicken <span style="float: right;" class="badge bg-success">4.5</span> </h6>
+          <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$150 for one</small></p>
         </div>
         <div class="card-img-overlay">
           <span class="card-text badge bg-primary">10% off upto 10</span>
