--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="card col-sm-12 col-md-6 col-lg-4 img-fluid"  style="width:300px">
-          <img class="card-img-top" src="C:biryanii.jpg" style="height: 400px;" alt="Card image">
+          <img class="card-img-top" src="biryanii.jpg" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">Biryani <span style="float: right;" class="badge bg-success">4.0</span> </h6>
             <p class="card-text">Table 9 Annarao circle <small style="float: right; font-weight:lighter">$250 for one</small></p>
@@ -110,7 +110,7 @@
       </div>
       
       <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
-        <img class="card-img-top" src="chicken-ankara-kabab.jpg" style="height: 400px;" alt="Card image">
+        <img class="card-img-top" src="chicken-angara-kabab.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
           <h6 class="card-title">Kabab-chicken <span style="float: right;" class="badge bg-success">4.5</span> </h6>
           <p class="card-text">Orion,Kapilathertham<small style="float: right; font-weight:lighter">$150 for one</small></p>
