--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2 style="text-align: center;">Zomato</h2>
     <div class="row">
 
-        <div class="card col-sm-12 col-md-6 col-lg-4 img-fluid"  style="width:300px">
+        <div class="card col-sm-12 col-md-6 col-lg-4 img-fluid w-100"  style="width:300px">
           <img class="card-img-top" src="Indian-Prawn-Curry-1B.jpg" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">prawns curry <span style="float: right;" class="badge bg-success">3.3</span> </h6>
@@ -25,7 +25,7 @@
           </div>
         </div>
 
-        <div class="card col-sm-12 col-md-6 col-lg-4 img-fluid"  style="width:300px">
+        <div class="card col-sm-12 col-md-6 col-lg-4 img-fluid w-100"  style="width:300px">
           <img class="card-img-top" src="biryanii.jpg" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">Biryani <span style="float: right;" class="badge bg-success">4.0</span> </h6>
@@ -37,7 +37,7 @@
           </div>
         </div>
 
-        <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
+        <div class="card col-sm-12 col-md-6 col-lg-4 w-100"  style="width:300px">
           <img class="card-img-top" src="fish curry.jpg" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">Fish Curry <span style="float: right;" class="badge bg-success">3.3</span> </h6>
@@ -49,7 +49,7 @@
           </div>
         </div>
 
-        <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
+        <div class="card col-sm-12 col-md-6 col-lg-4 w-100"  style="width:300px">
           <img class="card-img-top" src="dosa-recipe.jpg.webp" style="height: 400px;" alt="Card image">
           <div class="card-body">
             <h6 class="card-title">Dosa <span style="float: right;" class="badge bg-success">4.5</span> </h6>
@@ -61,7 +61,7 @@
           </div>
         </div>
 
-      <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
+      <div class="card col-sm-12 col-md-6 col-lg-4 w-100"  style="width:300px">
         <img class="card-img-top" src="pizza.jfif" style="height: 400px;" alt="Card image">
         <div class="card-body">
           <h6 class="card-title">pizza <span style="float: right;" class="badge bg-success">4.5</span> </h6>
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
+      <div class="card col-sm-12 col-md-6 col-lg-4 w-100"  style="width:300px">
         <img class="card-img-top" src="chapathi.jfif" style="height: 400px;" alt="Card image">
         <div class="card-body">
           <h6 class="card-title">Chapathi<span style="float: right;" class="badge bg-success">4.5</span> </h6>
@@ -85,7 +85,7 @@
         </div>
       </div>
 
-      <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
+      <div class="card col-sm-12 col-md-6 col-lg-4 w-100"  style="width:300px">
         <img class="card-img-top" src="Belgian-Chocolate-Ice-Cream.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
           <h6 class="card-title">Belgian-Chocolate-Ice-Cream<span style="float: right;" class="badge bg-success">4.5</span> </h6>
@@ -97,7 +97,7 @@
         </div>
       </div>
 
-      <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
+      <div class="card col-sm-12 col-md-6 col-lg-4 w-100"  style="width:300px">
         <img class="card-img-top" src="goat-mutton-curry.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
           <h6 class="card-title">Mutton<span style="float: right;" class="badge bg-success">4.5</span> </h6>
@@ -109,7 +109,7 @@
         </div>
       </div>
       
-      <div class="card col-sm-12 col-md-6 col-lg-4"  style="width:300px">
+      <div class="card col-sm-12 col-md-6 col-lg-4 w-100"  style="width:300px">
         <img class="card-img-top" src="chicken-angara-kabab.jpg" style="height: 400px;" alt="Card image">
         <div class="card-body">
           <h6 class="card-title">Kabab-chicken <span style="float: right;" class="badge bg-success">4.5</span> </h6>
